# course_prjkt

./: CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake
lib/sqlite/: CMakeLists.txt
src/: main.c
src/database/common/: database.c  database.h
src/database/orders_management/: orders_management.c  orders_management.h
src/database/tables/: schema.h  tables.c  tables.h
src/database/users_management/: users_management.c  users_management.h
src/loger/: loger.c  loger.h
src/tui/dialogs/: add_order.c  add_user.c  check_order_number.c  delete_order.c  delete_user.c  dialogs.h  edit_order.c  edit_user.c  login.c  login.h  search_orders.c  search_orders_by_letter.c  sort_orders.c
src/tui/menu/: menu.c
src/tui/menus/: acounts_manager.c  admin.c  menus.h  orders_manager.c  user.c
src/tui/menus/common/: menu_components.c  menu_components.h  menu_types.h  menus.c
src/tui/tables/: orders_list.c  tables.h  tables_list.h  users_list.c
src/tui/utils/: colors_definitions.h  console_utils.c  layout_utils.c  layout_utils.h  order_validation.c  order_validation.h  style_definitions.h  utils.h  validation_utils.c
src/tui/widgets/table/: table.c  table.h
